fix: euro not aligned.

--- a/front/src/app/stock/stock.component.scss
+++ b/front/src/app/stock/stock.component.scss
@@ -31,6 +31,7 @@ table {
     .price,
     .qty {
       text-align: right;
+      white-space: nowrap;
     }
   }
 }
